* Campaign Monitoring: added new module. This module displays a campaign-centric
  view of the callcenter activity. This module displays basic information on the
  campaign, and counters of call states. Additionally there is a panel of agents
  that handle calls, with current state and the phone number that is being
  handled. Another panel shows in-progress calls that are being placed and do
  not yet have an assigned agent. A log view displays all of the call-related
  activities with timestamps. All of this information is updated in realtime
  using ECCP events.
* Agent Console: add support for new request "callprogress".
* Agent Console: add support for the three new fields in agentunlinked event.
* Dialer (ECCP): add debug tracking to msg_QueueMemberRemoved. 
* Dialer (ECCP): getcampaignstatus: callstatus is now camelcased (internal 
  representation) instead of lowercase. Fix documentation to reflect this.
* Dialer (ECCP): agentunlinked event was modified with three new fields. Fix
  documentation to reflect this.
* Dialer (ECCP): add and document new request 'campaignlog'. This request allows
  to retrieve the event log for a particular campaign.
* Dialer (ECCP): emit queue on callprogress event.
* Dialer (ECCP): getcampaignstatus: propagate trunk for each call. Display all
  agents, not just the ones handling a call.
* Dialer (ECCP): fix validation that prevented incoming calls from entering
  OnQueue state.
* Dialer (ECCP): fix forgotten specification of campaign type on implementation
  of getcampaignstatus request.
* Dialer (ECCP): modify many of the ECCP example scripts to get agent and 
  password from the command line.
* Dialer (ECCP): fix error message for hangup request when agent exists but is 
  not handling a call
* Dialer (ECCP): add required campaign ID when starting hold.
* Agent Console: fix behavior when no callback extensions exist.
* Agent Console: fix two javascript warnings in IE6.